syntax = "proto3";
package proto;

option csharp_namespace = "CarRentalData";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message ReservationProtoObj
{
  int32 Id = 1;
  int32 CarId = 2;
  string UserName = 3;
  google.protobuf.Timestamp StartDate = 4;
  google.protobuf.Timestamp EndDate = 5;
  double TotalPrice = 6;
}

service ReservationProtoService
{
  rpc CreateReservation(ReservationProtoObj) returns (ReservationProtoObj);
  rpc CancelReservation(google.protobuf.Int32Value) returns (ReservationProtoObj);
  rpc GetAllReservations(google.protobuf.Empty) returns (ReservationProtoList);
  rpc GetReservationById(google.protobuf.Int32Value) returns (ReservationProtoObj);
  rpc GetReservationsByCarId(google.protobuf.Int32Value) returns (ReservationProtoList);
  rpc GetReservationsByUserName(google.protobuf.StringValue) returns (ReservationProtoList);
}

message ReservationProtoList
{
  repeated ReservationProtoObj Reservation = 1;
}
